# -logseq-processor

./: .gitignore  README.md  ToDo.md  chat_export.md  config.yaml  httpshuggingface.coJackrongQwen3.5-2B-Claude-4.6-Opus-Reasoning-Distilled-GGUF.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: process-articles-queue-only.yml  process-articles.yml  sync-processed.yml  test.yml
01_inbox/: D-FY.IT One Waterproof Everyday Backpack by D-FY.IT — Kickstarter.md  I built a free CharacterAI that runs locally  rOpenSourceAI.md  I gave up on Kindle and built my own eBook server with Calibre.md  httpshuggingface.cospacesLightricksLTX-2-3.md  httpswww.udemy.comcoursejumpstart-to-2d-game-development-godot-4-for-beginners.md
docs/: GITHUB_ACTIONS.md  IMPLEMENTATION_SUMMARY.md  SYNC_SETUP.md
queue/: status.json
scripts/: check_queue.py  pull_processed_articles.py  queue_to_markdown.py  sync_nextcloud_to_github.py  validate_urls.py
src/: common.py  html_parser.py  llm.py  main.py  metadata.py  pipeline_queue.py  processor.py  utils.py  youtube.py
tests/: test_html_parser_backoff.py  test_metadata_markdown_contract.py  test_pipeline_queue.py  test_queue_heartbeat.py  test_utils_expand_url.py
